[gd_scene load_steps=11 format=3 uid="uid://cy0eoq0y6egng"]

[ext_resource type="Script" uid="uid://5xly5qamfn5p" path="res://scripts/ui/interface.gd" id="1_qqekr"]
[ext_resource type="Texture2D" uid="uid://cd6vaqal4l22r" path="res://assets/icons/not_recording.svg" id="2_3mftk"]
[ext_resource type="Texture2D" uid="uid://83gbypei2ro2" path="res://assets/icons/play.svg" id="3_n777q"]
[ext_resource type="Texture2D" uid="uid://dpvfu48746o2v" path="res://assets/icons/send.png" id="4_pt1ru"]
[ext_resource type="Script" uid="uid://dx7nq6b7q4hn5" path="res://scripts/ui/spectrum.gd" id="5_7i0gs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v85qb"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.235294, 0.235294, 0.235294, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_26l7b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4rbkc"]
bg_color = Color(0.09803922, 0.09803922, 0.09803922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vsvvd"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0noqu"]
bg_color = Color(0.09803922, 0.09803922, 0.09803922, 1)
corner_radius_bottom_right = 7

[node name="Interface" type="PanelContainer"]
clip_children = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v85qb")
script = ExtResource("1_qqekr")

[node name="RecordingPlayback" type="AudioStreamPlayer" parent="."]

[node name="Microphone" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_26l7b")
autoplay = true
bus = &"Record"

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 5

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="VBox/HBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/v_separation = 6

[node name="RecordButton" type="TextureButton" parent="VBox/HBox/HFlowContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_BUTTON_RECORD"
texture_normal = ExtResource("2_3mftk")
ignore_texture_size = true
stretch_mode = 5

[node name="PlayButton" type="TextureButton" parent="VBox/HBox/HFlowContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_BUTTON_PLAY"
texture_normal = ExtResource("3_n777q")
ignore_texture_size = true
stretch_mode = 5

[node name="MessageInput" type="LineEdit" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_4rbkc")
placeholder_text = " Type your message..."

[node name="SendButton" type="TextureButton" parent="VBox/HBox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
tooltip_text = "TOOLTIP_BUTTON_SAVE"
texture_normal = ExtResource("4_pt1ru")
ignore_texture_size = true
stretch_mode = 5

[node name="BottomHBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="SpectrumPanel" type="PanelContainer" parent="VBox/BottomHBox"]
custom_minimum_size = Vector2(350, 55)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vsvvd")
script = ExtResource("5_7i0gs")

[node name="ConversationArea" type="ScrollContainer" parent="VBox/BottomHBox"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "TOOLTIP_BUTTON_SAVE"
theme_override_styles/panel = SubResource("StyleBoxFlat_0noqu")
horizontal_scroll_mode = 0

[node name="MessagesList" type="VBoxContainer" parent="VBox/BottomHBox/ConversationArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[connection signal="finished" from="RecordingPlayback" to="." method="_on_recording_playback_finished"]
[connection signal="pressed" from="VBox/HBox/HFlowContainer/RecordButton" to="." method="_on_record_button_pressed"]
[connection signal="pressed" from="VBox/HBox/HFlowContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="resized" from="VBox/HBox/MessageInput" to="VBox/HBox/MessageInput" method="_on_resized"]
[connection signal="pressed" from="VBox/HBox/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="resized" from="VBox/BottomHBox/SpectrumPanel" to="VBox/BottomHBox/SpectrumPanel" method="_on_resized"]
